--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "SET node backend/server.js",
-    "dev": "SET NODE_ENV=DEVELOPMENT& nodemon backend/server",
-    "prod": "SET NODE_ENV=PRODUCTION& nodemon backend/server",
+    "dev": "SET NODE_ENV=DEVELOPMENT& node backend/server",
+    "prod": "SET NODE_ENV=PRODUCTION& node backend/server",
     "seeder": "node backend/utils/seeder.js",
     "heroku-postbuild" : "NPM_CONFIG_PRODUCTION=false && npm install --prefix frontend && npm run build --prefix frontend"
   },
